[package]
name = "gm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

# Explicit versions for arkworks dependencies to avoid macro issues
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
